--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,18 @@
-name: deploy
-on:
-  push:
-    branches: [main]
-  workflow_dispatch:
-
+on: push
+name: 🚀 Deploy website on push
 jobs:
-  deploy: 
-    name: Deploy
+  deploy:
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@main
-        
-      - name: Sync files to hosting
-        uses: SamKirkland/FTP-Deploy-Action@4.2.0
-        with:
-          server: ftp.teamhearing.org
-          username: crescendo@teamhearing.org
-          password: ${{ secrets.ftp_password }} 
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v2
+    
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@4.2.0
+      with:
+        server: ftp.teamhearing.org
+        username: crescendo@teamhearing.org
+        password: ${{ secrets.ftp_password }} 
+          
       
