--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
-on: push
+on: 
+  push:
+    branches: [main]
 name: 🚀 Deploy website on push
 jobs:
-  deploy:
+  web-deploy:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
@@ -11,6 +13,8 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.2.0
       with:
+        timeout_minutes : 1
+        max_attempts : 3
         server: ftp.teamhearing.org
         username: crescendo@teamhearing.org
         password: ${{ secrets.ftp_password }} 
