--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
       with:
-        server: ftp.teamhearing.org
-        username: crescendo@teamhearing.org
-        password: ${{ secrets.ftp_password }} 
+        ftp_server: ftp.teamhearing.org
+        ftp_username: crescendo@teamhearing.org
+        ftp_password: ${{ secrets.ftp_password }} 
           
       
