--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,4 @@
-on: 
-  push:
-    branches: [main]
+on: push
 name: 🚀 Deploy website on push
 jobs:
   web-deploy:
@@ -11,10 +9,8 @@ jobs:
       uses: actions/checkout@v2
     
     - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@2.0.0
-      env:
-        FTP_SERVER: ${{ secrets.ftp_server }}
-        FTP_USERNAME: ${{ secrets.ftp_username }}
-        FTP_PASSWORD: ${{ secrets.ftp_password }}
-          
-      
+      uses: SamKirkland/FTP-Deploy-Action@4.2.0
+      with:
+        server: ${{ secrets.ftp_server }}
+        username: ${{ secrets.ftp_username }}
+        password: ${{ secrets.ftp_password }}
